@@ -14,7 +14,7 @@ repos:
 version:
 release:
 rpm:
-  version:         15.0.0
+  version:         16.0.0
   release:         0
   repo_name:
   org_name:        manageiq
@@ -36,13 +36,13 @@ rpm_repository:
     - "s390x"
     - "x86_64"
   :content:
-    :15-oparin:
+    :16-petrosian:
       :targets:
         - el8
       :rpms:
         :kafka: !ruby/regexp /.+-3\.2.+/
-        :manageiq: !ruby/regexp /.+-15\.\d\.\d-(alpha|beta|rc)?\d(\.\d)?\.el.+/
-        :manageiq-release: !ruby/regexp /.+-15\.0.+/
+        :manageiq: !ruby/regexp /.+-16\.\d\.\d-(alpha|beta|rc)?\d(\.\d)?\.el.+/
+        :manageiq-release: !ruby/regexp /.+-16\.0.+/
         :python-bambou: !ruby/regexp /.+-3\.1\.1.+/
         :python-pylxca: !ruby/regexp /.+-2\.1\.1.+/
         :python-unittest2: !ruby/regexp /.+-1\.1\.0.+/
@@ -51,8 +51,8 @@ rpm_repository:
         :repmgr10: !ruby/regexp /.+-4\.0\.6.+/
         :smem: !ruby/regexp /.+-1\.5.+/
         :wmi: !ruby/regexp /.+-1\.3\.14.+/
-    :15-oparin-nightly:
+    :16-petrosian-nightly:
       :targets:
         - el8
       :rpms:
-        :manageiq-nightly: !ruby/regexp /.+-15\.\d\.\d-(\d\.\d\.)?\d{14,}+\.el.+/
+        :manageiq-nightly: !ruby/regexp /.+-16\.\d\.\d-(\d\.\d\.)?\d{14,}+\.el.+/
