@@ -1,4 +1,7 @@
 %changelog
+* Wed Aug 17 2022 Jason Frey <fryguy9@gmail.com> - 16.0.0-1
+- Initial build of manageiq-release for Petrosian.
+
 * Mon Feb 14 2022 Jason Frey <fryguy9@gmail.com> - 15.0.0-1
 - Initial build of manageiq-release for Oparin.
 
